--- a/packages/component-library/tsconfig.prod.json
+++ b/packages/component-library/tsconfig.prod.json
@@ -4,9 +4,7 @@
     "outDir": "dist",
     "declaration": true,
     "jsx": "react-jsx",
-    "sourceMap": false,
+    "sourceMap": false
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
