feat: separate utilites to other package

--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@app/component-library": "^1.0.0",
+    "@app/utilities": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
