--- a/packages/utilities/tsconfig.prod.json
+++ b/packages/utilities/tsconfig.prod.json
@@ -4,7 +4,7 @@
     "outDir": "dist",
     "declaration": true,
     "jsx": "react-jsx",
-    "sourceMap": true
+    "sourceMap": false
   },
-  "include": ["src", "../utilities/src/useRandomNumber.ts"]
+  "include": ["src"]
 }
