--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@app/component-library": "^1.0.0",
-    "@app/utilities": "^1.0.0",
+    "@app/component-library": "*",
+    "@app/utilities": "*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:clear": "rm -rf build",
     "preview": "vite preview"
   },
   "devDependencies": {
