--- a/packages/component-library/package.json
+++ b/packages/component-library/package.json
@@ -5,8 +5,9 @@
   "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
+    "dev": "tsc --watch",
     "build": "tsc -p tsconfig.prod.json",
-    "build:watch": "tsc -p tsconfig.json --watch"
+    "build:clear": "rm -rf dist"
   },
   "peerDependencies": {
     "react": "^18.2.0",
