--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -5,8 +5,9 @@
   "types": "dist/index.d.ts",
   "files": ["dist"],
   "scripts": {
+    "dev": "tsc --watch",
     "build": "tsc -p tsconfig.prod.json",
-    "build:watch": "tsc -p tsconfig.json --watch"
+    "build:clear": "rm -rf dist"
   },
   "keywords": [],
   "author": "",
