--- a/packages/utilities/tsconfig.json
+++ b/packages/utilities/tsconfig.json
@@ -6,5 +6,6 @@
     "jsx": "react-jsx",
     "sourceMap": true
   },
-  "include": ["src", "../utilities/src/useRandomNumber.ts"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
