--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@changesets/cli": "^2.29.4",
     "lefthook": "^1.11.13",
     "prettier": "^3.5.3",
     "turbo": "^2.5.4",
